--- a/component_login/src/main/debug/AndroidManifest.xml
+++ b/component_login/src/main/debug/AndroidManifest.xml
@@ -4,12 +4,18 @@
 
     <application
         android:name="com.zhlw.debug.DebugApplication"
-        android:label="@string/app_name">
-        <activity android:name=".ui.LoginActivity"></activity>
-        <activity android:name="com.zhlw.debug.DebugActivity">
+        android:label="@string/app_name"
+        android:theme="@style/style_activity"
+        android:requestLegacyExternalStorage="true"
+        android:usesCleartextTraffic="true"
+        android:extractNativeLibs="true">
+
+        <activity android:name=".ui.LoginActivity"
+            android:launchMode="singleTask"
+            android:screenOrientation="user"
+            android:configChanges="orientation|keyboardHidden|screenSize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
